last part of checkpoint 4
r